# TDDCPP

./: CMakeLists.txt  run.sh
boost_1_76_0/bin.v2/: project-cache.jam
boost_1_76_0/stage/lib/: libboost_filesystem.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_python27.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_stacktrace_basic.dylib  libboost_stacktrace_noop.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework.dylib  libboost_wave.dylib  libboost_wserialization.dylib
curl-7.77.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
curl-7.77.0/docs/: Makefile
curl-7.77.0/docs/cmdline-opts/: Makefile
curl-7.77.0/docs/examples/: Makefile
curl-7.77.0/docs/libcurl/: Makefile
curl-7.77.0/docs/libcurl/opts/: Makefile
curl-7.77.0/include/: Makefile
curl-7.77.0/include/curl/: Makefile
curl-7.77.0/lib/: curl_config.h  libcurl.la
curl-7.77.0/lib/.deps/: curl-curl_ctype.Po  curl-curl_multibyte.Po  curl-dynbuf.Po  curl-nonblock.Po  curl-strtoofft.Po  curl-version_win32.Po  curl-warnless.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-bufref.Plo  libcurl_la-c-hyper.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_ctype.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_path.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-doh.Plo  libcurl_la-dotdot.Plo  libcurl_la-dynbuf.Plo  (+87 more)
curl-7.77.0/lib/.libs/: libcurl.4.dylib  libcurl.lai
curl-7.77.0/lib/vauth/.deps/: libcurl_la-cleartext.Plo  libcurl_la-cram.Plo  libcurl_la-digest.Plo  libcurl_la-digest_sspi.Plo  libcurl_la-gsasl.Plo  libcurl_la-krb5_gssapi.Plo  libcurl_la-krb5_sspi.Plo  libcurl_la-ntlm.Plo  libcurl_la-ntlm_sspi.Plo  libcurl_la-oauth2.Plo  libcurl_la-spnego_gssapi.Plo  libcurl_la-spnego_sspi.Plo  libcurl_la-vauth.Plo
curl-7.77.0/lib/vquic/.deps/: libcurl_la-ngtcp2.Plo  libcurl_la-quiche.Plo  libcurl_la-vquic.Plo
curl-7.77.0/lib/vssh/.deps/: libcurl_la-libssh.Plo  libcurl_la-libssh2.Plo  libcurl_la-wolfssh.Plo
curl-7.77.0/lib/vtls/.deps/: libcurl_la-bearssl.Plo  libcurl_la-gskit.Plo  libcurl_la-gtls.Plo  libcurl_la-keylog.Plo  libcurl_la-mbedtls.Plo  libcurl_la-mbedtls_threadlock.Plo  libcurl_la-mesalink.Plo  libcurl_la-nss.Plo  libcurl_la-openssl.Plo  (+6 more)
curl-7.77.0/scripts/: Makefile
curl-7.77.0/src/: Makefile  curl
curl-7.77.0/src/.deps/: curl-slist_wc.Po  curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_filetime.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  curl-tool_getpass.Po  curl-tool_help.Po  curl-tool_helpers.Po  curl-tool_homedir.Po  curl-tool_hugehelp.Po  curl-tool_libinfo.Po  curl-tool_main.Po  curl-tool_metalink.Po  curl-tool_msgs.Po  curl-tool_operate.Po  curl-tool_operhlp.Po  curl-tool_panykey.Po  curl-tool_paramhlp.Po  curl-tool_parsecfg.Po  curl-tool_progress.Po  curl-tool_setopt.Po  curl-tool_sleep.Po  curl-tool_strdup.Po  curl-tool_urlglob.Po  curl-tool_util.Po  curl-tool_vms.Po  curl-tool_writeout.Po  curl-tool_writeout_json.Po  (+1 more)
curl-7.77.0/src/.libs/: curl
curl-7.77.0/tests/: Makefile
curl-7.77.0/tests/certs/: Makefile
curl-7.77.0/tests/data/: Makefile
curl-7.77.0/tests/server/: Makefile
curl-7.77.0/tests/unit/: Makefile
glog-0.5.0/install/lib/: libglog.0.5.0.dylib
rlog-1.4/: Makefile  config.h  config.status  librlog.pc  libtool  makedist2.sh  rlog.spec
rlog-1.4/config/: Makefile
rlog-1.4/docs/: Makefile
rlog-1.4/rlog/: Error.lo  Makefile  RLogChannel.lo  RLogNode.lo  RLogPublisher.lo  RLogTime.lo  StdioNode.lo  SyslogNode.lo  common.h  librlog.la  rlog.lo  rloginit.lo  rloglocation.lo  test  testlog
rlog-1.4/rlog/.deps/: Error.Plo  RLogChannel.Plo  RLogNode.Plo  RLogPublisher.Plo  RLogTime.Plo  StdioNode.Plo  SyslogNode.Plo  rlog.Plo  rloginit.Plo  rloglocation.Plo  test.Po  testlog-testlog.Po
rlog-1.4/rlog/.libs/: librlog.5.0.0.dylib  librlog.dylib  librlog.la  librlog.lai  test  testlog
src/RetweetCollection/: RetweetCollection.cpp  RetweetCollection.h
src/Soundex/: Soundex.cpp  Soundex.h
src/Tweet/: Tweet.cpp  Tweet.h
src/c2/1/: SoundexTest.cpp  main.cpp
src/c3/1/: RetweetCollectionTest.cpp  RetweetCollectionWithOneTweetTest.cpp
src/c5/1/: Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
src/c5/13/: OutParameterTest.cpp
src/c5/15/: CurlHttp.cpp  CurlHttp.h  Http.h  HttpFactory.cpp  HttpFactory.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
src/c5/7/: Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
src/c6/1/: PortfolioTest.cpp  holding.h  main.cpp  portfolio.cpp  portfolio.h  purchaseRecord.h
src/c7/wav/: WavDescriptor.cpp  WavDescriptor.h  WavReader.cpp  WavReader.h  WavReaderTest.cpp  testFileRead.cpp
src/c9/: Area.cpp  Area.h  CppUTestExtensions.cpp  CppUTestExtensions.h  CppUTestExtensionsTest.cpp  GeoServer.cpp  GeoServer.h  GeoServerTest.cpp  GeoServerTest2.cpp  Location.cpp  Location.h  TestTimer.cpp  TestTimer.h  ThreadPool.h  ThreadPoolTest.cpp  User.h  VectorUtil.h  Work.h  WorkTest.cpp
src/common/: Common.cpp  Common.h
src/eventlog/: Eventlog.cpp  Eventlog.h  eventlogTest.cpp
src/utilities/: CharUtil.cpp  CharUtil.h  StringUtil.cpp  StringUtil.h
(+64 files in other folders)
